fix theme layout issue

--- a/src/css/layout.styl
+++ b/src/css/layout.styl
@@ -2,6 +2,12 @@
     position absolute
     z-index 13
 
+.border-line-top
+    top 0
+    left 0
+    right 0
+    height 1px
+
 .border-line-left
     top 0
     bottom 0
@@ -19,6 +25,10 @@
     left 0
     right 17px
     height 1px
+
+.head-area
+    border-style solid
+    border-width 0 0 1px
 
 .lside-area
     display none
